[gd_scene load_steps=28 format=3 uid="uid://cvota5ylgv847"]

[ext_resource type="Script" uid="uid://dqb277p0kku1s" path="res://src/player.gd" id="1_kpjcp"]
[ext_resource type="Texture2D" uid="uid://cb8lywq1xkfws" path="res://assets/player.png" id="2_kne1u"]
[ext_resource type="Texture2D" uid="uid://dfsnm10ocskhq" path="res://assets/coin.png" id="3_3li8b"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wd1uf"]
radius = 19.0
height = 40.0

[sub_resource type="Animation" id="Animation_wd1uf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bxsma"]
resource_name = "attack_1"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-4.47035e-08, 0.1, 0.2, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 31]
}

[sub_resource type="Animation" id="Animation_8gxew"]
resource_name = "attack_2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-1.49012e-08, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_lkrbl"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_0o8ui"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-7.45058e-09, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0o8ui"]
_data = {
&"RESET": SubResource("Animation_wd1uf"),
&"attack_1": SubResource("Animation_bxsma"),
&"attack_2": SubResource("Animation_8gxew"),
&"idle": SubResource("Animation_lkrbl"),
&"walk": SubResource("Animation_0o8ui")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ledqy"]
animation = &"attack_1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6t5o2"]
animation = &"attack_2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bxsma"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lkrbl"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lkrbl"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bxsma"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wd1uf"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_krhou"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8tlgu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nknqk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q7c2t"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0o8ui"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8gxew"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ledqy"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6t5o2"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0o8ui"]
states/Start/position = Vector2(263, 13)
states/attack_1/node = SubResource("AnimationNodeAnimation_ledqy")
states/attack_1/position = Vector2(387, 181)
states/attack_2/node = SubResource("AnimationNodeAnimation_6t5o2")
states/attack_2/position = Vector2(614, 181)
states/idle/node = SubResource("AnimationNodeAnimation_bxsma")
states/idle/position = Vector2(387, 20)
states/walk/node = SubResource("AnimationNodeAnimation_lkrbl")
states/walk/position = Vector2(614, 20)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_lkrbl"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_bxsma"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_wd1uf"), "idle", "attack_1", SubResource("AnimationNodeStateMachineTransition_krhou"), "idle", "attack_2", SubResource("AnimationNodeStateMachineTransition_8tlgu"), "walk", "attack_2", SubResource("AnimationNodeStateMachineTransition_nknqk"), "walk", "attack_1", SubResource("AnimationNodeStateMachineTransition_q7c2t"), "attack_1", "idle", SubResource("AnimationNodeStateMachineTransition_0o8ui"), "attack_1", "walk", SubResource("AnimationNodeStateMachineTransition_8gxew"), "attack_2", "walk", SubResource("AnimationNodeStateMachineTransition_ledqy"), "attack_2", "idle", SubResource("AnimationNodeStateMachineTransition_6t5o2")]
graph_offset = Vector2(-246.877, -34.4198)

[sub_resource type="CircleShape2D" id="CircleShape2D_kpjcp"]
radius = 72.0278

[node name="CharacterBody2D" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
collision_layer = 3
script = ExtResource("1_kpjcp")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("2_kne1u")
hframes = 8
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
y_sort_enabled = true
position = Vector2(1, 25)
shape = SubResource("CapsuleShape2D_wd1uf")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-3, 29)
position_smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0o8ui")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_0o8ui")
anim_player = NodePath("../AnimationPlayer")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 2

[node name="AttackCollisionShape" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_kpjcp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GoldLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 997.0
offset_top = 570.0
offset_right = 1093.0
offset_bottom = 625.0
theme_override_colors/font_color = Color(0.992157, 0.835294, 0.0862745, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "10"

[node name="HealthProgressBar" type="ProgressBar" parent="CanvasLayer/Control"]
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 42.0
offset_top = 21.0
offset_right = 259.0
offset_bottom = 39.0
max_value = 300.0
value = 300.0
show_percentage = false

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control"]
position = Vector2(966, 597)
texture = ExtResource("3_3li8b")

[node name="RegenDelayTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="RegenTickTimer" type="Timer" parent="."]
